[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Table-Data"
version = "0.1.0"
description = "基于 Streamlit 构建的数据表处理系统"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "lijianqiao", email = "lijianqiao2906@live.com" }]
dependencies = [
    "fastexcel>=0.14.0",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=2.0.0",
    "polars>=1.31.0",
    "psutil>=7.0.0",
    "pyarrow>=20.0.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "streamlit>=1.46.0",
    "xlsxwriter>=3.2.5",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [".git", "__pycache__", ".venv", ".vscode"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "W191"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["app"]
